test/files/pos/t6358.scala
class L(val t: Int) extends AnyVal {
   def lazyString = {
      lazy val x = t.toString
      () => x
   }
}
